--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
 	"description": "",
 	"main": "ship.js",
 	"scripts": {
-		"test": "jest --testPathIgnorePatterns=./tests/ignore --watchAll"
+		"watch": "webpack --progress --watch",
+		"test": "jest --testPathIgnorePatterns=./tests/ignore --watchAll",
+		"start": "webpack-dev-server --open"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"jest": "^25.1.0"
+	},
+	"devDependencies": {
+		"webpack": "^4.42.1",
+		"webpack-cli": "^3.3.11",
+		"webpack-dev-server": "^3.10.3"
 	}
 }
